<resources>
    <!--GENERAL -->
    <string name="app_name">Leisagun</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor.
    </string>

    <!-- Main Activity-->
    <string name="autologin_success">Bienvenido</string>
    <string name="autologin_error">Ha ocurrido un error al intentar iniciar session</string>
    <string name="search_noresult">No se han encontrado actividades con esos filtros</string>


    <!--Login_Activity-->
    <string name="login_mail_text">E-mail</string>
    <string name="login_pass_text">Contraseña</string>

    <string name="login_submit_button">Enviar</string>
    <string name="login_to_register_button">¿No tienes cuenta? ¡Regístrate!</string>

    <string name="login_credential_error_message">Por favor, completa todos los campos.</string>
    <string name="login_complete_error_message">Credenciales incorrectas. Inténtalo de nuevo.</string>

    <string name="login_first_error">El usuario no existe o está deshabilitado.</string>
    <string name="login_invalid_creds_error">Credenciales inválidas. Por favor, verifica tu correo y contraseña.</string>

    <!--Register_Activity-->
    <string name="register_full_name_text">Nombre Completo</string>
    <string name="register_age_text">Edad</string>
    <string name="register_mail_text">E-mail</string>
    <string name="register_pass_text">Contraseña</string>
    <string name="register_repass_text">Repite Contraseña</string>

    <string name="register_submit_button">Registrarse</string>
    <string name="register_to_login_button">¿Ya tienes una cuenta? ¡Entra!</string>

    <string name="register_credential_error_message">Por favor, completa todos los campos.</string>
    <string name="register_complete_error_message">Credenciales incorrectas. Inténtalo de nuevo.</string>
    <string name="register_additional_info">Error al guardar la información adicional.</string>

    <string name="register_mail_already_exists">Este email ya está registrado..</string>
    <string name="register_pass_weak">La contraseña es demasiado débil.</string>
    <string name="register_unknown_error">Error al registrar:</string>

    <!--  Home_Activity-->
    <string name="search">Buscar...</string>
    <string name="tags">Etiquetas</string>


    <!--<string name="home_filter_gym_text">GYM</string>
    <string name="home_filter_walk_text">Senderismo</string>
    <string name="home_filter_beach_text">Playa</string>

    <string name="home_ereaga_text">EREAGA</string>
    <string name="home_getxo_text">Getxo</string>
    <string name="home_username_text">TestUser</string>-->

    <!-- Maps Activity -->
    <string name="find_nearby_activities">Encontrar Actividades Cercanas</string>

    <!-- Profile Activity -->
    <string name="profile_title">Tu Perfil</string>
    <string name="select_fav">Seleccionar Favoritos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="delete_account">Borrar cuenta</string>

    <!--  Menu -->
    <string name="calendar">Calendario</string>
    <string name="create_activity">Crear</string>
    <string name="map">Mapa</string>

    <!--  Create activity-->
    <string name="create_activity_title">Crear Actividad</string>
    <string name="create_activity_description">Descripción</string>
    <string name="create_activity_date">Fecha</string>
    <string name="create_activity_time">Hora</string>
    <string name="create_activity_location">Abrir mapa</string>
    <string name="create_activity_create">Crear actividad</string>
    <string name="create_activity_location_text">Dirección</string>

    <string name="created_succ">Actividad creada exitosamente</string>
    <string name="select_date">Por favor, selecciona una fecha</string>
    <string name="all_fields">Por favor, completa todos los campos</string>
    <string name="location_error">La ubicación proporcionada no existe</string>
    <string name="select_activity">Seleciona Una Actividad</string>

    <!--  Chat activity -->
    <string name="chat_send">Enviar</string>

    <!--  Favourite activity-->
    <string name="favourite_activity_title">Actividades</string>

    <string name="back_button_description" translatable="false">Descripcion</string>
        <string-array name="months">
            <item>Enero</item>
            <item>Febrero</item>
            <item>Marzo</item>
            <item>Abril</item>
            <item>Mayo</item>
            <item>Junio</item>
            <item>Julio</item>
            <item>Agosto</item>
            <item>Septiembre</item>
            <item>Octubre</item>
            <item>Noviembre</item>
            <item>Diciembre</item>
        </string-array>

</resources>


